fix wrap specificity

--- a/packages/ng/styles/definitions/select/_select-input.scss
+++ b/packages/ng/styles/definitions/select/_select-input.scss
@@ -147,7 +147,7 @@
 			}
 
 			.numericBadge {
-				@include numericBadge.s;
+				@include numericBadge.S;
 			}
 		}
 	}
