--- a/packages/scss/src/components/clear/vars.scss
+++ b/packages/scss/src/components/clear/vars.scss
@@ -1,4 +1,3 @@
 @mixin vars {
   --components-clear-size: 1rem;
-  --components-clear-icon-size: var(--sizes-XS-lineHeight);
 }
