--- a/packages/scss/src/components/textfields/mods.scss
+++ b/packages/scss/src/components/textfields/mods.scss
@@ -1,5 +1,6 @@
 @use '@lucca-front/scss/src/commons/utils/form';
 @use '@lucca-front/icons/src/commons/utils/icon';
+@use '@lucca-front/scss/src/components/clear/exports' as clear;
 
 @mixin password {
 	.textfield-suffix {
@@ -281,8 +282,7 @@
 	}
 
 	.textfield-clear {
-		--components-clear-size: 0.75rem;
-		--components-clear-icon-size: 0.75rem;
+		@include clear.S;
 
 		right: 2.125rem;
 		bottom: 0.625rem;
@@ -324,8 +324,7 @@
 	}
 
 	.textfield-clear {
-		--components-clear-size: 0.75rem;
-		--components-clear-icon-size: 0.75rem;
+		@include clear.S;
 
 		right: 1.75rem;
 		bottom: 0.375rem;
